--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
-html, .complet, section, h1 {
+html,.complet, section, h1 {
   font-family: 'Raleway', sans-serif;
   padding: 1em 2em;
   font-size: 18px;
   background: #222;
   color: #aaa; }
+
+  body{
+      background-image: url("img/pays2.png");
+  }
+
 
 h1, h2 {
   font-weight: 200;
@@ -20,8 +25,16 @@ h2 {
   height: 50px;
   width: 50px; }
 
+.img-ch{
+height: 100px;
+width: 100px;
+  }
+
 p {
   text-align: justify; }
+.phot_chat{
+    text-align: center;
+}
 
 #talkbubble {
   width: 120px;
@@ -107,7 +120,8 @@ p {
   position: relative;
   top: 1px; }
 
-#instructions {
+
+/* #instructions {
   position: absolute;
   color: #666;
   bottom: 0;
@@ -115,22 +129,7 @@ p {
   font-family: sans-serif;
   width: 100%;
   text-align: center;
-  pointer-events: none; }
+  pointer-events: none; } */
 
-#img {
-  top: 150px; }
-
-#game {
-  background: url("../img/cabin2.jpg") center no-repeat;
-  background-size: cover;
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  z-index: 1; }
-  #game #left #right {
-    height: 100%;
-    width: 100%; }
-  #game .btn {
-    margin-top: 125px; }
 
 /*# sourceMappingURL=style.css.map */
