--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
-html, .complet, section, h1 {
+/*html ,.complet, section, h1 {
   font-family: 'Raleway', sans-serif;
   padding: 1em 2em;
   font-size: 18px;
   background: #222;
-  color: #aaa; }
-
+  color: #aaa;
+}
+*/
 h1, h2 {
   font-weight: 200;
   margin: 0.4em 0; }
@@ -121,6 +122,8 @@ p {
   top: 150px; }
 
 #game {
+  padding: 0 0 0 0;
+  margin: 0 0 0 0;
   background: url("../img/cabin2.jpg") center no-repeat;
   background-size: cover;
   height: 100%;
@@ -132,5 +135,19 @@ p {
     width: 100%; }
   #game .btn {
     margin-top: 125px; }
+
+#train {
+  filter: grayscale(80%);
+  filter: saturate(30%);
+  background: url("../img/train2.jpg") center no-repeat;
+  background-size: cover; }
+  #train .jumbotron {
+    opacity: 0.7; }
+  #train .img-fluid {
+    max-width: 5%;
+    height: auto;
+    position: absolute;
+    top: 470px;
+    left: 600px; }
 
 /*# sourceMappingURL=style.css.map */
